# AI-Meeting-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  transcripts.py  users.py
app/core/: config.py  database.py  prompts.py  security.py
app/models/: transcript.py  user.py
app/repositories/: transcript.py
app/schemas/: transcript.py  user.py
app/services/: analyzer.py  chunking.py  embedding.py  errors.py  llm.py  masking.py  personalization.py  qa.py  question_guard.py  report.py  retrieval.py  stt.py
app/static/: app.js  index.html  styles.css
data/templates/: report_template.txt
scripts/: migrate_action_items_rag.py  migrate_analysis_jobs.py  migrate_transcript_archive.py  migrate_transcript_titles.py  migrate_user_identity_and_ownership.py  seed_users.py
tests/: test_access_and_reports.py  test_account_isolation.py  test_analyzer.py  test_archive.py  test_chunking.py  test_external_services.py  test_main.py  test_personalization.py  test_retrieval.py  test_task_status.py  test_titles.py  test_upload_validation.py
